Collections Chapter Complete

--- a/client/templates/posts/post_item.html
+++ b/client/templates/posts/post_item.html
@@ -1,4 +1,6 @@
 <!-- The template name must equal any template includes -->
+<!-- This page provides post content for each post-->
+<!-- Things to remember: double check plurals-->
 <template name="postItem">
   <div class="post">
     <div class="post-content">
