--- a/client/templates/posts/posts_list.html
+++ b/client/templates/posts/posts_list.html
@@ -1,4 +1,5 @@
 <!-- The template name must equal any template includes -->
+<!-- Things to remember: double check plurals-->
 <template name="postsList">
   <div class="posts">
     {{#each posts}}
